# MLOps_Eks

./: Instruction.txt  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: eks_deploy.yml  packaging_api_image.yml
requirements/: requirements.txt  test_requirements.txt
tests/: conftest.py  test_features.py  test_predictions.py
titanic_model/: pipeline.py  predict.py  train_pipeline.py
titanic_model/config/: core.py
titanic_model_api/: requirements.txt
titanic_model_api/app/: config.py  main.py
titanic_model_api/app/schemas/: predict.py
titanic_model_api/app/templates/: index.html
