[metadata]
name = titanic_model
description = Titanic dataset classification model package
author = Ramendra 
author_email = karna.ramenk@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3
platforms = unix, linux, osx, cygwin, win32

# Trove Classifiers: https://pypi.org/classifiers/
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.7.0
packages = find:
include_package_data = true

[options.packages.find]
exclude = 
    tests

[options.package_data]
classification_model = VERSION

[options.extras_require]
# Optional dependencies go here


